# AgileBreakOut

./: .gitignore  CMakeLists.txt
assets/: Config.ini  DefaultConfig.ini
assets/Models/: Halfpipe.mtl  Submarine.mtl
assets/Textures/: AgileBreakOut - Shortcut.lnk
cmake/: FindBGFX.cmake  Findliquidfun.cmake
include/: PrecompiledHeader.h
include/Core/: BGFXRenderer.h  CBoxShape.h  CTransform.h  ConfigFile.h  EPlaySound.h  Engine.h  Engine.h.orig  EventBroker.h  InputController.h  Model.h  PNG.h  RenderQueue.h  Renderer.h  ResourceManager.h  Sound.h  StaticSystem.h  Texture.h  World.h
include/GUI/: Button.h  EButtonEnter.h  EButtonLeave.h  EButtonPress.h  EButtonRelease.h  ESliderUpdate.h  Frame.h  GameFrame.h  MainMenuFrame.h  NumberFrame.h  Slider.h  TextureFrame.h  Viewport.h
include/Game/: BallSystem.h  BrickComponents.h  CBackground.h  CBall.h  CBrick.h  CBrickPart.h  CInkBlasterBrick.h  CKraken.h  CKrakenAttackBrick.h  CLife.h  CLifebuoy.h  CLifebuoyBrick.h  CMultiBallBrick.h  CNewWaterVolume.h  CPad.h  CPowerUp.h  CProjectile.h  CStandardBrick.h  CStickyAim.h  CStickyBrick.h  CTravels.h  CWall.h  EActionButton.h  EArrivedAtNewStage.h  EBallFellOffStage.h  EBreakAllBricks.h  EBrickGenerating.h  EClusterClear.h  EComboEvent.h  ECreatePowerUp.h  EGameOver.h  EGameStart.h  EHitLag.h  EHitPad.h  EInkBlaster.h  EInkBlasterOver.h  EKrakenAppear.h  EKrakenAttack.h  EKrakenAttackEnd.h  EKrakenDefeated.h  (+36 more)
include/Physics/: CCircleShape.h  CParticle.h  CParticleEmitter.h  CPhysics.h  CRectangleShape.h  CWaterVolume.h  EContact.h  ECreateParticleSequence.h  ESetImpulse.h  PhysicsSystem.h  PhysicsSystem.h.orig
include/Rendering/: AnimationSystem.h  BaseRenderer.h  BaseTexture.h  CAnimation.h  CCamera.h  CPointLight.h  CSprite.h  Camera.h  EAnimationComplete.h  OBJ.h  PNG.h  (+3 more)
src/game/: CMakeLists.txt
src/game/Core/: BGFXRenderer.cpp  Camera.cpp  ConfigFile.cpp  EventBroker.cpp  Model.cpp  OBJ.cpp  PNG.cpp  Renderer.cpp  ResourceManager.cpp  Skeleton.cpp  Sound.cpp  StaticSystem.cpp  Texture.cpp  World.cpp
src/game/Core/Shaders/BGFX/: Fragment.sc  Vertex.sc  varying.dev.sc
src/game/Core/Shaders/Deferred/1/: Fragment.glsl  Vertex.glsl
src/game/Core/Shaders/Deferred/3/: Fragment.glsl
src/game/Core/Shaders/Deferred/water2/: Fragment.glsl
src/game/Core/Shaders/Forward/: Fragment.glsl  Vertex.glsl
src/game/Core/Shaders/PureForward/: Fragment.glsl
src/game/Core/Util/: FileWatcher.cpp  Logging.cpp
src/game/Game/: BallSystem.cpp  HitLagSystem.cpp  KrakenSystem.cpp  LevelSystem.cpp  LevelSystem.cpp.orig  LifeSystem.cpp  LifebuoySystem.cpp  PadSystem.cpp  PadSystem.cpp.orig  ProjectileSystem.cpp  ProjectileSystem.cpp.orig  ScreenShakeSystem.cpp  TravellingSystem.cpp  WaterSystem.cpp
src/game/Physics/: ContactListener.cpp  PhysicsSystem.cpp  PhysicsSystem.cpp.orig
src/game/Rendering/: AnimationSystem.cpp  Camera.cpp  OBJ.cpp  PNG.cpp  RawModel.cpp  Skeleton.cpp
src/game/Rendering/DirectX/: Model.cpp  Renderer.cpp  ShaderProgram.cpp  Texture.cpp
src/game/Rendering/DirectX/Shaders/: Flat.pixel.hlsl  pixel.hlsl  vertex.hlsl
src/game/Rendering/OpenGL/: Model.cpp  Renderer.cpp  ShaderProgram.cpp  Texture.cpp
src/game/Rendering/OpenGL/Shaders/Deferred/water2/: Fragment.glsl
src/game/Rendering/OpenGL/Shaders/Forward/: Fragment.glsl  Vertex.glsl
src/game/Rendering/OpenGL/Shaders/Screen/: Fragment.glsl
src/game/Sound/: Sound.cpp  SoundSystem.cpp  SoundSystem.cpp.orig
src/game/Transform/: TransformSystem.cpp
src/tests/: CMakeLists.txt  EntityCloneTest.cpp  EventFixture.h  EventTest.cpp  FrameTest.cpp  RemovePhysicsSystemTest.cpp
tools/: StyleGuide.h  deploy.bat  deploy.sh
(+72 files in other folders)
